  - #4388, AddRasterConstraints: Ignore NULLs when generating constraints (Raúl Marín)
  - #4327, Avoid pfree'ing the result of getenv (Raúl Marín)
  - #4406, Throw on invalid characters when decoding geohash (Raúl Marín)
  - #4429, Avoid resource leaks with PROJ6 (Raúl Marín)
  - #4372, PROJ6: Speed improvements (Raúl Marín)

PostGIS 3.0.0alpha2
2019/06/02
For full changes and enhancements, refer to PostGIS 3.0.0 section.
This version requires PostgreSQL 9.5+-12 and GEOS >= 3.6+
Additional features enabled if you are running Proj6+ and PostgreSQL 12

* Major highlights *
  - #4404, Fix selectivity issue with support functions (Paul Ramsey)
  - #4311, Make wagyu the default option to validate polygons.
          This option requires a C++11 compiler and will use CXXFLAGS (not CFLAGS).
          It only enabled if built with MVT support (protobuf)
          Add `--without-wagyu` to disable this option and keep the behaviour
          from 2.5 (Raúl Marín)
  - #4198, Add ST_ConstrainedDelaunayTriangles SFCGAL function (Darafei
           Praliaskouski)

PostGIS 3.0.0alpha1
2019/05/26
For full changes and enhancements, refer to PostGIS 3.0.0 section.
This version requires PostgreSQL 9.5+-12 and GEOS >= 3.6+
Additional features enabled if you are running Proj6+ and PostgreSQL 12
* Major highlights *
  - #4341, Using "support function" API in PgSQL 12+ to replace SQL inlining
           as the mechanism for providing index support under ST_Intersects, et al
           (Paul Ramsey)
  - #3888, Raster support now packaged as a separate extension - postgis_raster
           (Sandro Santilli)
  - #3807, Extension library files no longer include the minor version.
           Use New configure switch --with-library-minor-version
           if you need the old behavior (Regina Obe)
  - #4322, Support for Proj 6+ API, bringing more accurate datum transforms
           and support for WKT projections
  - #4260, liblwgeom headers are not installed anymore.