@@ -15,6 +15,7 @@ Additional features enabled if you are running Proj6+ and PostgreSQL 12
   - #4406, Throw on invalid characters when decoding geohash (Raúl Marín)
   - #4429, Avoid resource leaks with PROJ6 (Raúl Marín)
   - #4372, PROJ6: Speed improvements (Raúl Marín)
+  - #3437, Speed up ST_Intesects with Points (Raúl Marín)
 
 PostGIS 3.0.0alpha2
 2019/06/02
